[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/entitys/playable/Player.gd" type="Script" id=1]
[ext_resource path="res://addons/PEWD/Gun/Prototype.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/entitys/playable/DebugUI.gd" type="Script" id=3]
[ext_resource path="res://scripts/entitys/playable/Items.gd" type="Script" id=4]
[ext_resource path="res://_sc/ui/item popup/PopupUI.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape" id=1]
radius = 0.643388

[node name="Player" type="KinematicBody" groups=["Playable"]]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_editor_description_": ""
}
gravity = 20.0
max_speed = 25.0
sprint_multiplier = 1.3
friction = 0.15
air_friction_multiplier = 0.8
friction_reduction_whilst_accel = 0.75
jump_height = 600.0
acceleration = 40.0
instant_turn = false

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="CameraHolder" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="CameraHolder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.597846, 0 )
cull_mask = 1048573
current = true
fov = 120.0

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1920, 1080 )
transparent_bg = true
handle_input_locally = false
msaa = 2
render_target_update_mode = 3

[node name="Holder" type="Node" parent="ViewportContainer/Viewport"]

[node name="ViewmodelHolder" type="Spatial" parent="ViewportContainer/Viewport/Holder"]
transform = Transform( 0.999346, 0, 0.0361728, 0, 1, 0, -0.0361728, 0, 0.999346, 0, 0.084, -0.227 )

[node name="Spacer" type="Spatial" parent="ViewportContainer/Viewport/Holder/ViewmodelHolder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.544878, 0 )

[node name="ViewModel" parent="ViewportContainer/Viewport/Holder/ViewmodelHolder/Spacer" instance=ExtResource( 2 )]
_ray = NodePath("../../../GunCam/Hit Ray")
_ref_frame = NodePath("../../../../../..")

[node name="GunCam" type="Camera" parent="ViewportContainer/Viewport/Holder"]
cull_mask = 2

[node name="Hit Ray" type="RayCast" parent="ViewportContainer/Viewport/Holder/GunCam"]
enabled = true
cast_to = Vector3( 0, 0, -100 )

[node name="Debug UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TopL" type="VBoxContainer" parent="Debug UI"]
anchor_right = 0.229
anchor_bottom = 0.432
margin_right = 0.503983
margin_bottom = -0.200012
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="Label" parent="Debug UI/TopL"]
margin_right = 440.0
margin_bottom = 14.0
text = "N/A FPS"

[node name="Player Velocity" type="Label" parent="Debug UI/TopL"]
margin_top = 18.0
margin_right = 440.0
margin_bottom = 32.0
text = "N/A UNITS"

[node name="Items" type="Node" parent="."]
script = ExtResource( 4 )

[node name="ItemPopup" parent="." instance=ExtResource( 5 )]
visible = false

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="debug_info" from="." to="Debug UI" method="_on_Player_debug_info"]
[connection signal="timeout" from="ItemPopup/Timer" to="." method="_on_popup_timeout"]

[editable path="ItemPopup"]
